<resources>
    <string name="app_name">Skillbox_12_12</string>
    <string name="textView_autorization">Авторизация</string>
    <string name="editText_email_hint">E-mail</string>
    <string name="editText_password_hint">Пароль</string>
    <string name="checkbox_license_text">Согласен с условиями пользовательского соглашения</string>
    <string name="button_login_text">Войти</string>
    <string name="toast_loginComplete">Авторизация прошла успешно</string>
    <string name="button_longOperation_text">Долгая операция</string>
    <string name="textView_status_false">Аторизация не выолнена</string>
    <string name="textView_status_true">Авторизация выполнена</string>
</resources>