<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrolingContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_header"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/skillbox_cover"
                app:layout_constraintBottom_toBottomOf="@+id/guidelineHorHeader"
                app:layout_constraintEnd_toEndOf="@+id/scrolingContainer"
                app:layout_constraintStart_toStartOf="@+id/scrolingContainer"
                app:layout_constraintTop_toTopOf="@+id/scrolingContainer" />

            <TextView
                android:id="@+id/textView_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/textView_autorization"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/guidelineHorHeader" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="100dp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editText_password_hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/editText_email" />

            <CheckBox
                android:id="@+id/checkBoxLicense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_license_text"
                app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVerticalLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVerticalRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.80" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editText_email_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/textView_header" />

            <TextView
                android:id="@+id/textView_autorizationStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/textView_status_false"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxLicense" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/button_login_text"
                app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/textView_autorizationStatus" />

            <Button
                android:id="@+id/button_longOperation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_longOperation_text"
                app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalRight"
                app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/button_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>